--- a/SPtoDotnet2Migration/OrderManagementAPI/appsettings.json
+++ b/SPtoDotnet2Migration/OrderManagementAPI/appsettings.json
@@ -1,11 +1,12 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=YourDatabaseName;Uid=YourUsername;Pwd=YourPassword;"
+    "DefaultConnection": "Server=localhost;Database=OrderManagement;Uid=root;Pwd=password;"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Warning"
     }
   },
   "AllowedHosts": "*"
